# omop-constructs

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  py_pi.yml  tests.yml
architecture/: index.html
construct-catalog/: index.html
docs/: architecture.md  construct-catalog.md  index.md  usage.md
js/: mermaid-init.js
search/: search_index.json
src/notebooks/: .env  construct_factory.ipynb  data_dictionary_production.ipynb  episodes.ipynb  episodes2.ipynb  mat_view_demo.ipynb  registry.ipynb  runtime_factory_eg.ipynb  runtime_manifest_eg.ipynb  staging_worked_example.ipynb
src/omop_constructs/: __init__.py  _lazy_imports.py  bootstrap.py  bootstrap_modules.py  cli.py  config.py  typing.py
src/omop_constructs/alchemy/: __init__.py  adapters.py  source_factories.py
src/omop_constructs/alchemy/concepts/: __init__.py  concept_mappers.py  concept_standardisation.py
src/omop_constructs/alchemy/condition_modifiers/: __init__.py  condition_modifier_join.py  condition_modifier_mv.py  modifier_factories.py  modifier_joins.py  modifier_mappers.py
src/omop_constructs/alchemy/conditions/: __init__.py
src/omop_constructs/alchemy/demography/: __init__.py  demography_matview.py  demography_queries.py
src/omop_constructs/alchemy/episodes/: __init__.py  condition_episode_mv.py  condition_episode_objects.py  consult_window_mv.py  consult_window_query.py  course_joins.py  course_mv.py  cycle_join.py  cycle_mv.py  episode_factories.py  episode_joins.py  fraction_joins.py  fraction_mv.py  modality_intent_join.py  modality_intent_mv.py  surgical_joins.py  surgical_procedure_mv.py  systemic_treatment_joins.py  systemic_treatment_mv.py  treatment_envelope_mv.py  treatment_envelope_query.py  treatment_summary_joins.py  treatment_summary_mv.py
src/omop_constructs/alchemy/events/: __init__.py  dx_linked_event_mv.py  dx_linked_obs_mv.py  dx_linked_procedure_mv.py  dx_linked_visit_mv.py  event_factories.py  event_queries.py  observation_queries.py  procedure_queries.py  visit_queries.py
src/omop_constructs/alchemy/joins/: concept_standardisation.py  condition_factories.py  condition_joins.py  condition_mappers.py  condition_modifier_joins.py
src/omop_constructs/core/: __init__.py  base.py  constructs.py  ddl.py  errors.py  materialized.py  plan.py  registry.py  schema_snapshot.py  sql.py
src/omop_constructs/semantics/: __init__.py  lookups.py  runtime_lookups.py
src/omop_constructs/services/: __init__.py  concept.py  person.py
tests/: README.md  conftest.py  test_config_and_cli.py  test_construct_registry_compile_check.py  test_construct_registry_postgres.py  test_primary_diagnosis_condition_mv.py  test_registry_schema_artifact_postgres.py  test_registry_schema_snapshot.py
tests/artifacts/: construct_registry_schema.csv
usage/: index.html
(+8 files in other folders)
