[project]
name = "omop-constructs"
version = "0.1.5"
description = "For building complex constructs on top of the omop-alchemy library."
readme = "README.md"
authors = [
    { name = "Georgie Kennedy", email = "georgina.kennedy@unsw.edu.au" }
]
requires-python = ">=3.12"
dependencies = [
    "omop-alchemy==0.5.11",
    "omop-semantics==0.1.8",
    "sqlalchemy>=2.0.45",
    "urllib3>=2.6.3"
]

[project.scripts]
omop-constructs = "omop_constructs.cli:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"