[project]
name = "omop-constructs"
version = "0.4.5"
description = "For building complex constructs on top of the omop-alchemy library."
readme = "README.md"
authors = [
    { name = "Georgie Kennedy", email = "georgina.kennedy@unsw.edu.au" }
]
requires-python = ">=3.12"
dependencies = [
    "omop-alchemy>=0.6.3",
    "omop-semantics>=0.1.15",
    "psycopg-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
]

[project.optional-dependencies]
dev = [
    "ipython>=9.8.0",
    "mypy>=1.19.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "tornado>=6.5.5",
    "mkdocs<2.0",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-mermaid2-plugin",
    "mkdocs-table-reader-plugin",
    "mkdocs-macros-plugin",
    "pygments>=2.20.0"
]

[project.scripts]
omop-constructs = "omop_constructs.cli:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "postgres: requires a configured PostgreSQL database via ENGINE_CDM or ENGINE",
]
